--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,21 @@
 *{
     margin: 5px auto;
-
+    background-color: rgb(221, 237, 252);
+    font-family: Arial;
 }
 body{
     padding: 20px;
     width: fit-content;
     margin: 0 auto;
+}
+.message{
+    font-size: 20px;
+    color: rgb(32, 82, 125);
+    font-weight: 400;
+    background-color: rgb(170, 208, 241);
+    padding: 5px;
+    margin-bottom: 5px;
+    
 }
 .topbar h1{
     text-align: center;
@@ -14,11 +24,11 @@ body{
 }
 .topbar button{
     width: fit-content;
-    padding: 5px;
+    padding: 8px;
     border: none;
     font-size: 20px;
     border-radius: 5px;
-    margin: 10 auto;
+    margin: 5px;
     background-color: rgb(137, 189, 235);
     color: rgb(32, 82, 125);
     transition: 0.1s;
@@ -29,6 +39,7 @@ body{
 }
 #clearBtn:hover{
     background-color:  rgb(202, 28, 28);
+    color:  rgb(230, 140, 140);
 }
 .topbar select{
     width: fit-content;
